--- a/project-02/src/style.css
+++ b/project-02/src/style.css
@@ -1,7 +1,44 @@
-#home{
-    height: 100vh
+#card{
+    border: 1px solid black;
+    height: 50vh
 }
 
-img{
-    width: 100%
+#card-title{
+    background-color: aliceblue;
+    height: 15%
+}
+
+#manga-chapters{
+    background-color: antiquewhite;
+    height: 10%;
+    overflow-y: scroll;
+}
+
+#manga-chapters::-webkit-scrollbar {
+    display: none;
+  }
+
+#genre-badges{
+    height: 10%;
+}
+
+#manga-details{
+    height: 55%
+}
+
+#manga-image{
+    background-color: aquamarine;
+}
+
+#manga-description{
+    background-color: coral;
+}
+
+#buttons{
+    background-color: bisque;
+    height: 10%
+}
+
+#action{
+    background-color: red !important;
 }
