--- a/project-02/src/css/style.css
+++ b/project-02/src/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap');
 @import './badges.css';
 @import './card.css';
 
@@ -33,4 +34,15 @@
 
 .reviews-text, .reviews-title-text{
     font-size: 3rem;
+    font-family: 'Proza Libre', sans-serif;
+}
+
+.CircularProgressbar{
+    max-height: 200px;
+}
+
+.progress-bar{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: gold !important;
 }
