--- a/project-02/src/css/style.css
+++ b/project-02/src/css/style.css
@@ -11,6 +11,27 @@
     background-color: rgba(0,0,0,0.1);
 }
 
+#bgvid{
+    position: fixed;
+    top:0;
+    left:0;
+    min-width:100%;
+    min-height:100%;
+    object-fit:cover;
+    filter: brightness(50%);
+}
+
+.landing{
+    height: 100vh; 
+}
+
+.text-div{
+    z-index:400001;
+    background-color: rgba(255,255,255,0.8);
+    height: 60vh;
+    width: 60vw;
+}
+
 .alert-icon{
     color: #FF6663;
     font-size: 100px;
