--- a/project-02/src/css/card.css
+++ b/project-02/src/css/card.css
@@ -59,6 +59,10 @@
     overflow-y: scroll;
 }
 
+.manga-author{
+    background-color: rgba(0,0,0,0.1);
+}
+
 #buttons {
     background-color: rgb(249,249,249);
     border-bottom-left-radius: 10px;
