--- a/project-02/src/css/reviews.css
+++ b/project-02/src/css/reviews.css
@@ -57,3 +57,11 @@
     border-bottom-right-radius: 5px;
     background-color: gold !important;
 }
+
+.each-review{
+    background: whitesmoke
+}
+
+.add-new-review{
+    border: 1px solid black; 
+}
