--- a/project-02/src/css/style.css
+++ b/project-02/src/css/style.css
@@ -4,39 +4,52 @@
 @import './reviews.css';
 @import './displayPage.css';
 
-.display-page{
+.display-page {
     background-image: url(../images/background2.jpg);
 }
 
-.overlay{
+.overlay {
     height: 100%;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
-#bgvid{
+#bgvid {
     position: fixed;
-    top:0;
-    left:0;
-    min-width:100%;
-    min-height:100%;
-    object-fit:cover;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
     filter: brightness(50%);
 }
 
-.landing{
-    height: 100vh; 
+.landing {
+    height: 100vh;
 }
 
-.text-div{
-    z-index:400001;
-    background-color: rgba(255,255,255,0.8);
+.spinner-div {
+    height: 100vh;
+}
+
+.spinner {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+.text-div {
+    z-index: 400001;
+    background-color: rgba(255, 255, 255, 0.8);
     height: 70vh;
     width: 60vw;
     border-radius: 20px;
 }
 
-.landing-text{
-    font-size:1.7rem;
+.landing-text {
+    font-size: 1.7rem;
     font-weight: 700;
     font-family: 'Proza Libre', sans-serif;
 
@@ -50,27 +63,27 @@
     animation-timing-function: linear;
 }
 
-.btn-border{
+.btn-border {
     background: linear-gradient(90deg, #4458dc, #854fee);
     border: none;
-    color: whitesmoke; 
+    color: whitesmoke;
     position: relative;
     transition: background 0.5s ease-in;
 }
 
-.btn-border:hover{
+.btn-border:hover {
     border: none;
     background: white;
     background-clip: padding-box;
     color: black;
 }
 
-.btn-border::after{
+.btn-border::after {
     content: '';
     background: linear-gradient(90deg, #4458dc, #854fee);
     border-radius: 4px;
     position: absolute;
-    top: -2px; 
+    top: -2px;
     bottom: -2px;
     left: -2px;
     right: -2px;
@@ -103,3 +116,12 @@
     }
 }
 
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
