--- a/project-02/src/css/displayPage.css
+++ b/project-02/src/css/displayPage.css
@@ -14,7 +14,7 @@
 
 .add-new-manga{
     position: fixed;
-    bottom: 20px;
+    top: 20px;
     right: 20px;
     font-size: 2.5rem;
     font-weight: 1000;
